--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         
         <div class="userpass">
             <header>Anmelden</header>
-            <input type="text"  placeholder="Benutzername">
+            <input type="text"  name="Benutzername" placeholder="Benutzername">
             <br>
-            <input type="password"  placeholder=" Passwort">
+            <input type="password" name="Passwort"  placeholder=" Passwort">
             <br>
             <input type="submit">
         </div>
